# nitpick

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
nitpick/: __main__.py  bot.py  load_token.py
tests/: test_nitpick.py
